--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <button id="todos-button">Submit</button>
         </form><br><br>
 
-        
+        <script src="todo-functions.js"></script>
         <script src="todo.js"></script>
     </body>
 </html>
