setting up uuid for each todo (to be able to target them accordingly)

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
             <button id="todos-button">Submit</button>
         </form><br><br>
 
+        <script src="uuidv4.js"></script>
         <script src="todo-functions.js"></script>
         <script src="todo.js"></script>
     </body>
