--- a/index.html
+++ b/index.html
@@ -1,26 +1,38 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>TODO app</title>
+        <title>To-Do App (Ik)</title>
+        <meta charset="utf-8">
+        <link href="/styles/style.css" rel="stylesheet">
+        <link href="/images/favicon.png" rel="icon">
     </head>
     <body>
-        <h1>Welcome to the <i>TODO</i> website</h1>
+        <div class="header">
+            <div class="container">
+                <h1 class="header__title">To-Do App</h1>
+                <h2 class="header__subtitle">What do you need to do?</h2>
+            </div>
+        </div>
 
-        <input type="text" id="search-todo" placeholder="Search for TODOs">
-
-        <label id="todos-label">
-            <input type="checkbox" id="todo-checkbox"> Check to see TODOs
-        </label>
+        <div class="actions">
+            <div class="actions__container">
+                <input type="text" id="search-todo" class="input" placeholder="Search for TODOs">
+                <label id="todos-label" class="checkbox">
+                    <input type="checkbox" id="todo-checkbox"> Check to see TODOs
+                </label>
+            </div>
+        </div>
         
-        <div id="todos-div"></div><br>
+        <div class="container">
+            <div id="todos-div"></div><br>
+            <form id="todos-form">
+                <input id="todos-input" class="input" placeholder="Add a TODO" name="userInput">
+                <button id="todos-button" class="button">Submit</button>
+            </form>
+        </div>
 
-        <form id="todos-form">
-            <input id="todos-input" placeholder="Add a TODO" name="userInput">
-            <button id="todos-button">Submit</button>
-        </form><br><br>
-
-        <script src="uuidv4.js"></script>
-        <script src="todo-functions.js"></script>
-        <script src="todo.js"></script>
+        <script src="/scripts/uuidv4.js"></script>
+        <script src="/scripts/todo-functions.js"></script>
+        <script src="/scripts/todo.js"></script>
     </body>
 </html>
